app/modules/rl.cpi/campaign/creative-metrics/creative-cell/creative-cell.scss
@import "rl_seeds/variables";
@import "rl_seeds/mixins";
@import "font-awesome";

.creative_cell {
  // font-size: 2em;
  p {
    margin : 0;
  }

  .headline,
  .headline + .editable-wrap input {
    font-weight: 700;
  }

  .editable {
    cursor: pointer;
    border: 1px dashed transparent;
    color: $color-bodycopy;

    &:hover {
      color: $color-bodycopy;
      border-bottom-color: $color-info;
    }

    &.invalid + form input {
      border-color: $color-danger;
    }
  }

  .editable-error {
    display: none;
  }

  .editable-wrap {
    display: block;
    width: 100%;
    position: relative;
    left: -$spacing-small;
    top: -3px;
    margin-bottom: -($spacing-default / 3);
  }

  .editable-controls > input {
    width: 100%;
    height: 100%;
  }

  .editable-buttons button,
  .rl-xcounter {
    direction: initial;
    height: 100%;
    display: inline-block;
    margin: 0;
    padding: 0;
    width: 2rem;
    text-align: center;
    vertical-align: top;
  }

  .editable-buttons {
    position: absolute;
    direction: rtl;
    height: 100%;

    button {
      font-size: 0;

      &[type="submit"],
      &[type="button"] {
        @include fa-icon(before, '');
      }

      &[type="submit"]:before {
        content: $fa-var-check;
      }
      &[type="button"]:before {
        content: $fa-var-times;
      };
    }
  }

  .rl-xcounter {
    border: 1px solid $color-light;
    background: $color-bright;
    line-height: 2em;
    pointer-events: none;
    &.negative {
      color: $color-danger;
    }
  }

  .editable-wrap,
  .editable-buttons {
    box-shadow: $spacing-small $spacing-small $color-shadow;
  }
}

